--- a/www/templates/partials/photoButton.html
+++ b/www/templates/partials/photoButton.html
@@ -1,6 +1,6 @@
-<div class="photo-ring" animation-delay="0" animation="linearEase" bgcolor="#fff" clockwise="true" color="#008bca" current="vm.animateTime" duration="200" max="vm.animateMax" radius="49" responsive="false" round-progress>
+<div class="photo-ring" animation-delay="0" animation="linearEase" bgcolor="#fff" clockwise="true" color="#008bca" current="vm.animateTime" duration="200" max="vm.animateMax" radius="49" responsive="false" round-progress id="photo-ring-div">
   <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-  <svg width="98px" height="98px" viewBox="0 0 98 98" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg width="98px" height="98px" viewBox="0 0 98 98" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  id="photo-ring-svg">
     <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
     <title>photoring</title>
     <desc>Created with Sketch.</desc>
