--- a/www/templates/bugreport.html
+++ b/www/templates/bugreport.html
@@ -22,7 +22,7 @@
         </label>
       </div>
       <div class="text-center gotham-light padding thanks" ng-if="ctrl.viewSettings.sent && !ctrl.badWordOffender">
-        <p>Thanks for submitting. We’ll look into fixing the bug for the next app update.</p>
+        <p>Thank you for submitting. We'll respond to your issue soon.</p>
       </div>
       <div class="text-center gotham-light padding thanks" ng-if="ctrl.viewSettings.sent && ctrl.badWordOffender">
         <p>Thanks for submitting, but please watch your language next time or this guy will fight you.</p>
