--- a/www/templates/devices.html
+++ b/www/templates/devices.html
@@ -58,7 +58,7 @@
       </div>
       <div class="col text-center bounce">
         <div class="scan gotham-book">Scan</div>
-        <navigation-arrow type="slide" direction="down"></navigation-arrow>
+        <navigation-arrow type="down" direction="down"></navigation-arrow>
       </div>
     </div>
   </ion-content>
