--- a/www/templates/bulbRamping.html
+++ b/www/templates/bulbRamping.html
@@ -1,9 +1,8 @@
-<ion-view view-title="Exposure Ramping" class="exposure">
+<!-- <ion-view view-title="Bulb Ramping" class="exposure">
   <ion-content class="has-header" overflow-scroll="true" has-bouncing="true">
     <div class="gotham-light white exposure-container">
       <div class="row row-center center text-center delay">
-
-        <ion-toggle ng-model="ctrl.timelapseModel.timelapses[ctrl.dId].settings.activeExposure" ng-checked="ctrl.timelapseModel.timelapses[ctrl.dId].settings.activeExposure" class="grey" ng-change="ctrl.changeExposure()">
+        <ion-toggle ng-model="ctrl.timelapseModel.timelapses[ctrl.dId].settings.activeBulbExposure" ng-checked="ctrl.timelapseModel.timelapses[ctrl.dId].settings.activeBulbExposure" class="grey" ng-change="ctrl.changeBulbRamping()">
           Enable
         </ion-toggle>
       </div>
@@ -96,59 +95,6 @@
             </div>
           </div>
         </div>
-        <div class="row-center container gotham-medium">
-          <div class="slider-container startIso" ng-if="ctrl.isoOptions.valueArray.length">
-            <div style="height: 55px;">
-              <div class="setting-header left gotham-book blue label carousel">Start ISO:</div>
-
-              <ks-swiper-container
-                loop="false"
-                show-nav-buttons="false"
-                slides-per-view="1"
-                initial-slide="ctrl.timelapseModel.timelapses[ctrl.dId].settings.exposure.startIsoIndex"
-                current-slide="ctrl.timelapseModel.timelapses[ctrl.dId].settings.exposure.startIsoIndex"
-                pagination-clickable="false"
-                on-ready="ctrl.onReadySwiper(swiper, 'startIso', 'startIso')"
-                speed="600"
-                override-parameters="{iOSEdgeSwipeDetection: true, centeredSlides: true, resistanceRatio: 1, longSwipesRatio: 0.3, freeMode: true, freeModeSticky: true, freeModeMomentumBounce: false,  freeModeMomentumRatio: 0.4, freeModeMomentumVelocityRatio: 0.8}">
-                <ks-swiper-slide class="swiper-slide" data-index="{{$index}}" ng-repeat="item in ctrl.isoOptions.valueArray">
-
-                  <div class="text-center gotham-book">
-                    <span class="iso-number">{{item.value}}</span>
-                  </div>
-
-                </ks-swiper-slide>
-              </ks-swiper-container>
-            </div>
-          </div>
-
-        </div>
-        <div class="row-center container gotham-medium">
-          <div class="slider-container endIso" ng-if="ctrl.isoOptions.valueArray.length">
-            <div style="height: 55px;">
-              <div class="setting-header left gotham-book blue label carousel">End ISO:</div>
-
-              <ks-swiper-container
-                loop="false"
-                show-nav-buttons="false"
-                slides-per-view="1"
-                initial-slide="ctrl.timelapseModel.timelapses[ctrl.dId].settings.exposure.endIsoIndex"
-                current-slide="ctrl.timelapseModel.timelapses[ctrl.dId].settings.exposure.endIsoIndex"
-                pagination-clickable="false"
-                on-ready="ctrl.onReadySwiper(swiper, 'endIso', 'endIso')"
-                speed="600"
-                override-parameters="{iOSEdgeSwipeDetection: true, centeredSlides: true, resistanceRatio: 1, longSwipesRatio: 0.3, freeMode: true, freeModeSticky: true, freeModeMomentumBounce: false,  freeModeMomentumRatio: 0.4, freeModeMomentumVelocityRatio: 0.8}">
-                <ks-swiper-slide class="swiper-slide" data-index="{{$index}}" ng-repeat="item in ctrl.isoOptions.valueArray">
-
-                  <div class="text-center gotham-book">
-                    <span class="iso-number">{{item.value}}</span>
-                  </div>
-
-                </ks-swiper-slide>
-              </ks-swiper-container>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </ion-content>
@@ -177,4 +123,15 @@
       </div>
     </div>
   </div>
+</ion-view>
+ -->
+
+ <ion-view view-title="Bulb Ramping" class="bug-report">
+  <ion-content class="has-header" scroll="false">
+    <div class="bug-report-container">
+      <div class="text-center gotham-light padding thanks">
+        <p>Bulb Ramping is Coming Soon!!</p>
+      </div>
+    </div>
+  </ion-content>
 </ion-view>
